<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8C55E"
    tools:context=".lengthactivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="122dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="630dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:padding="12dp"
        android:text="LENGTH CONVERSION."
        android:textColor="#040303"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="68dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="535dp"
        android:padding="12dp"
        android:text="@string/choose_you_starting_unit"
        android:textColor="#101010"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="290dp"
        android:layout_height="84dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="467dp"
        android:padding="12dp"
        android:text="@string/choose_the_amount_you_would_like_to_convert"
        android:textColor="#101010"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/length_spinner"
        android:layout_width="116dp"
        android:layout_height="45dp"
        android:layout_marginStart="282dp"
        android:layout_marginLeft="262dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="549dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="290dp"
        android:layout_height="85dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="350dp"
        android:padding="12dp"
        android:text="@string/what_unit_do_you_wish_it_to_be_converted_to"
        android:textColor="#101010"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/length_spinner2"
        android:layout_width="116dp"
        android:layout_height="64dp"
        android:layout_marginStart="282dp"
        android:layout_marginLeft="282dp"
        android:layout_marginTop="370dp"
        android:layout_marginBottom="359dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/convertbutton"
        android:layout_width="305dp"
        android:layout_height="91dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="242dp"
        android:text="@string/convert"
        android:textColor="#171616"
        app:backgroundTint="#F36257"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainmenubutton"
        android:layout_width="305dp"
        android:layout_height="91dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="135dp"
        android:text="@string/return_to_main_menu"
        android:textColor="#070707"
        app:backgroundTint="#F36257"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="101dp"
        android:layout_height="71dp"
        android:layout_marginStart="284dp"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="467dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>